# seng_330_assignment_2

./: .gitignore  Config.h  Doxyfile  INSTALL.md  Makefile  README.md  doxyconfig
doc/html/: _bike_8cxx.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _config_8h.html  _config_8h_source.html  _ergometer_8cxx.html  _machine_8cxx.html  _machine_8h.html  _machine_8h_source.html  annotated.html  class_bike-members.html  class_bike.html  class_ergometer-members.html  class_ergometer.html  class_machine-members.html  class_machine.html  classdata_1_1_serialized_machine-members.html  classdata_1_1_serialized_machine.html  classes.html  classstd_1_1tr1_1_1gtest__internal_1_1_get.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_010_01_4-members.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_010_01_4.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_011_01_4-members.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_011_01_4.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_012_01_4-members.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_012_01_4.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_013_01_4-members.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_013_01_4.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_014_01_4-members.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_014_01_4.html  (+426 more)
src/: .gitignore  Bike.cxx  CMakeCache.txt  CMakeLists.txt  Config.h.in  Ergometer.cxx  Machine.cxx  Machine.h  Makefile  cmake_install.cmake  interface.cxx  machine.pb.cc  machine.pb.h  machine.proto  run  tutorial.proto  unittest.cxx
(+62 files in other folders)
